Added latest tag to mysql image

--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -16,7 +16,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80'
   db:
-    image: mysql
+    image: mysql:latest
     restart: always
     secrets:
       - db-password
