Setup database connection in Docker and created migrations

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,7 +3,9 @@
 ##
 ## Get latest from `dotnet new gitignore`
 
-password.txt
+# Private config files
+**/appsettings.*.json
+**/DockerEnv
 
 # dotenv files
 .env
