--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -4,6 +4,11 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
+# Ignore environment appsettings
+**/appsettings.*.json
+**/DockerEnv
+
+# Standard ignores
 **/.DS_Store
 **/.classpath
 **/.dockerignore
