--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   server:
     build:
@@ -8,25 +10,21 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    develop:
-      watch:
-        - action: rebuild
-          path: .
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80'
+      - ASPNETCORE_URLS=http://+:80
+    env_file: "DockerEnv/Api.env"
   db:
     image: mysql:latest
     restart: always
-    secrets:
-      - db-password
     volumes:
       - db-data:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=Alexandria
-      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
-    expose:
-      - "3306"
+      - MYSQL_USER=standard_user
+    env_file: "DockerEnv/MySql.env"
+    ports:
+      - "3306:3306"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
@@ -35,7 +33,3 @@ services:
 
 volumes:
   db-data:
-
-secrets:
-  db-password:
-    file: password.txt
