Enabled hot reload for docker watch

--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -5,6 +5,10 @@ services:
     build:
       context: .
       target: development
+    develop:
+      watch:
+        - action: rebuild
+          path: .
     ports:
       - "8080:80"
     depends_on:
