--- a/backend/Alexandria.Api/Alexandria.Api.csproj
+++ b/backend/Alexandria.Api/Alexandria.Api.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="11.10.0" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.1.24081.2">
           <PrivateAssets>all</PrivateAssets>
@@ -15,10 +17,6 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0-preview.1.24081.2" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Infrastructure\Migrations\" />
     </ItemGroup>
 
 </Project>
