Moved validation logic

--- a/backend/Alexandria.UnitTests/Alexandria.UnitTests.csproj
+++ b/backend/Alexandria.UnitTests/Alexandria.UnitTests.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="DomainTests\" />
       <Folder Include="FeatureTests\PeopleTests\" />
     </ItemGroup>
 
