--- a/backend/Alexandria.Api/Alexandria.Api.csproj
+++ b/backend/Alexandria.Api/Alexandria.Api.csproj
@@ -19,4 +19,8 @@
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Helpers\" />
+    </ItemGroup>
+
 </Project>
