Renamed test folders

--- a/backend/tests/Alexandria.Domain.Tests/Alexandria.Domain.Tests.csproj
+++ b/backend/tests/Alexandria.Domain.Tests/Alexandria.Domain.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common\" />
+      <Folder Include="CommonTests\" />
     </ItemGroup>
 
     <ItemGroup>
