--- a/backend/src/Alexandria.Api/Alexandria.Api.csproj
+++ b/backend/src/Alexandria.Api/Alexandria.Api.csproj
@@ -4,10 +4,15 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>Alexandria.WebApi</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Alexandria.Infrastructure\Alexandria.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
