--- a/backend/src/Alexandria.Application/Alexandria.Application.csproj
+++ b/backend/src/Alexandria.Application/Alexandria.Application.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ErrorOr" Version="2.0.1" />
+      <PackageReference Include="MediatR" Version="12.4.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Alexandria.Domain\Alexandria.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
