--- a/orchestration/compose.yaml
+++ b/orchestration/compose.yaml
@@ -1,33 +1,34 @@
 version: '3.8'
 
 services:
-  server:
+  api:
     build:
-      context: .
+      context: ../backend
       target: development
     develop:
       watch:
         - action: rebuild
           path: .
     ports:
-      - "8080:80"
+      - "80:80"
     depends_on:
       database:
         condition: service_healthy
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
-    env_file: "DockerEnv/Api.env"
+    env_file: "Env/Api.env"
+
   idp:
     image: quay.io/keycloak/keycloak:26.0.6
     command: start-dev
-    environment:
-      - KC_BOOTSTRAP_ADMIN_USERNAME=admin
-      - KC_BOOTSTRAP_ADMIN_PASSWORD=admin
+    env_file: "Env/KeyCloak.env"
     ports:
       - "8080:8080"
     volumes:
       - keycloak-data:/opt/keycloak/data
+      - ./Providers:/opt/keycloak/providers
+
   database:
     image: mysql:latest
     restart: always
@@ -36,7 +37,7 @@ services:
     environment:
       - MYSQL_DATABASE=Alexandria
       - MYSQL_USER=standard_user
-    env_file: "DockerEnv/MySql.env"
+    env_file: "Env/MySql.env"
     ports:
       - "3306:3306"
     healthcheck:
@@ -44,7 +45,24 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+      
+  rabbitmq:
+    image: rabbitmq:4.0.4-management-alpine
+    restart: always
+    hostname: dev-host
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+    ports:
+      - "5672:5672" # RabbitMQ message broker port
+      - "15672:15672" # RabbitMQ management console
+    env_file: "Env/RabbitMq.env"
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   database-data:
   keycloak-data:
+  rabbitmq-data:
