--- a/backend/src/Alexandria.Application/Alexandria.Application.csproj
+++ b/backend/src/Alexandria.Application/Alexandria.Application.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
