--- a/backend/tests/Alexandria.Infrastructure.Tests/Alexandria.Infrastructure.Tests.csproj
+++ b/backend/tests/Alexandria.Infrastructure.Tests/Alexandria.Infrastructure.Tests.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
-        <PackageReference Include="FluentAssertions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
@@ -20,7 +20,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Alexandria.Domain\Alexandria.Domain.csproj" />
+      <ProjectReference Include="..\..\src\Alexandria.Infrastructure\Alexandria.Infrastructure.csproj" />
+      <ProjectReference Include="..\Alexandria.Common.Tests\Alexandria.Common.Tests.csproj" />
+      <ProjectReference Include="..\Alexandria.Domain.Tests\Alexandria.Domain.Tests.csproj" />
     </ItemGroup>
 
 </Project>
