--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from `dotnet new gitignore`
 
 **/files/
+src/Alexandria.Api/Alexandria.WebApi.http
 
 # Private config files
 **/appsettings.*.json
