Fixed Docker files. Added npm script for docker

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -4,6 +4,9 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
+# Ignore dev directory
+**/files
+
 # Ignore environment appsettings
 **/appsettings.*.json
 **/DockerEnv
