--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
+    "docker": "vite --mode docker",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
