--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "docker": "vite --mode docker",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.7.9",
